--- a/src/main/webapp/HTML/Html_veterinaria/registro_Mascotas.html
+++ b/src/main/webapp/HTML/Html_veterinaria/registro_Mascotas.html
@@ -21,9 +21,9 @@
     <div class="container logo-navContanier">
         <nav class="navigation">
             <ul>
-                <li><a href="../HTML/Html_propetario/registro_Mascota.html">Crear Mascota</a></li>
-                <li><a href="../Html_propetario/crear_Caso.html">Crear Caso</a></li>
-                <li><a href="../Html_propetario/tablas_Mascotas.html">Tablas o Listado</a></li>
+                <li><a href="../Html_veterinaria/registro_Mascotas.html">Registrar Visita</a></li>
+                <li><a href="../Html_veterinaria/registro_Veterinaria.html">Crear Veterinaria</a></li>
+                <li><a href="../Html_veterinaria/tablaVeterinaria.html">Tablas o Listado</a></li>
             </ul>
         </nav>
     </div>
@@ -38,15 +38,13 @@
     </div>
 
     <form action="../create-pet" class="formulario__registrarMascota">
-        Case ID <input type="text" class="form-control" id="case_ID" name="case_ID">
+        userName <input type="text" class="form-control" id="case_ID" name="case_ID">
         <br/>
-        Created At: <input type="text" class="form-control" id="pet_Microchip" name="pet_Microchip">
+        Name <input type="text" class="form-control" id="pet_Microchip" name="pet_Microchip">
         <br/>
-        Type <input type="text" class="form-control" id="pet_Name" name="name">
+        Adress <input type="text" class="form-control" id="pet_Name" name="name">
         <br/>
-        Descripcion <input type="text" class="form-control" id="pet_Specie" name="pet_Specie">
-        <br/>
-        pet_id <input type="text" class="form-control" id="pet_Race" name="pet_Race">
+        Neighborhood <input type="text" class="form-control" id="pet_Specie" name="pet_Specie">
         <br/>
         <input type="submit" value="Creat Case">
     </form>
