--- a/src/main/webapp/HTML/Html_veterinaria/registro_Mascotas.html
+++ b/src/main/webapp/HTML/Html_veterinaria/registro_Mascotas.html
@@ -38,15 +38,19 @@
     </div>
 
     <form action="../create-pet" class="formulario__registrarMascota">
-        userName <input type="text" class="form-control" id="case_ID" name="case_ID">
+        Visit ID <input type="text" class="form-control" id="case_ID" name="case_ID">
         <br/>
-        Name <input type="text" class="form-control" id="pet_Microchip" name="pet_Microchip">
+        Creat at <input type="text" class="form-control" id="pet_Microchip" name="pet_Microchip">
         <br/>
-        Adress <input type="text" class="form-control" id="pet_Name" name="name">
+        Type <input type="text" class="form-control" id="pet_Name" name="name">
         <br/>
-        Neighborhood <input type="text" class="form-control" id="pet_Specie" name="pet_Specie">
+        Description <input type="text" class="form-control" id="Description" name="Description">
         <br/>
-        <input type="submit" value="Creat Case">
+        vet_id <input type="text" class="form-control" id="vet_id" name="vet_id">
+        <br/>
+        pet_id <input type="text" class="form-control" id="pet_id" name="pet_id">
+        <br/>
+        <input type="submit" value="Creat Pet">
     </form>
 
 </main>
