--- a/src/main/webapp/HTML/Html_veterinaria/registro_Mascotas.html
+++ b/src/main/webapp/HTML/Html_veterinaria/registro_Mascotas.html
@@ -37,7 +37,7 @@
         <hr class="barra">
     </div>
 
-    <form action="../create-pet" class="formulario__registrarMascota">
+    <form action="../create-petregister" class="formulario__registrarMascota">
         Visit ID <input type="text" class="form-control" id="case_ID" name="case_ID">
         <br/>
         Creat at <input type="text" class="form-control" id="pet_Microchip" name="pet_Microchip">
