--- a/src/main/webapp/HTML/Html_veterinaria/registro_Veterinaria.html
+++ b/src/main/webapp/HTML/Html_veterinaria/registro_Veterinaria.html
@@ -37,7 +37,7 @@
         <hr class="barra">
     </div>
 
-    <form action="../creat-vett" class="formulario__registroVeterinaria">
+    <form action="../creat-vetregister" class="formulario__registroVeterinaria">
         userName <input type="text" class="form-control" id="case_ID" name="case_ID">
         <br/>
         Name <input type="text" class="form-control" id="pet_Microchip" name="pet_Microchip">
