--- a/src/main/webapp/HTML/Html_veterinaria/registro_Veterinaria.html
+++ b/src/main/webapp/HTML/Html_veterinaria/registro_Veterinaria.html
@@ -21,9 +21,9 @@
     <div class="container logo-navContanier">
         <nav class="navigation">
             <ul>
-                <li><a href="../Html_veterinaria/registro_Mascotas.html">Registrar Visita</a></li>
-                <li><a href="../Html_veterinaria/registro_Veterinaria.html">Crear Veterinaria</a></li>
-                <li><a href="../Html_veterinaria/tablaVeterinaria.html">Tablas o Listado</a></li>
+                <li><a href="registro_Mascotas.html">Registrar Visita</a></li>
+                <li><a href="registro_Veterinaria.html">Crear Veterinaria</a></li>
+                <li><a href="tablaVeterinaria.html">Tablas o Listado</a></li>
             </ul>
         </nav>
     </div>
